Removed save button in favor of .change for drop down selects.  Modal window now available and old site accessed by old.php

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,16 @@ p {
     font-size: 14px;
     line-height: auto;
 }
+#selectBuilding{
+    width: 630px;
+    position: absolute;
+    top: 30px;
+    left: 30%;
+    background: #fff;
+    padding: 25px;
+    border-radius: 5px;
+    border: 1px solid #666;
+}
 
 .clearfix:after {
     visibility: hidden;
