--- a/css/main.css
+++ b/css/main.css
@@ -254,10 +254,18 @@ p {
 * ===========================================================
 */
 /* Large desktop */
-@media (max-width: 768px) {
-    .container {
-        width: 480px;
-        height: 320px;
+@media (max-width: 768px)  {
+    .Container {
+        width: 400px;
+        height: 300px;
+        padding: 4px 0px 0px 6px;
+        margin: 0 auto;
+        background: #fff url(../images/map1-480.png) no-repeat;
+    }
+
+    .MapContainer {
+        width: 450px;
+        height: 300px;
         padding: 4px 0px 0px 6px;
         margin: 0 auto;
         background: #fff url(../images/map1-480.png) no-repeat;
@@ -272,18 +280,29 @@ p {
     }
 }
 
-/* Portrait tablet to landscape and desktop */
-@media (min-width: 768px) and (max-width: 979px) {
-    ...
-}
+/* Large desktop */
+@media (max-width: 400px) {
+    .Container {
+        width: 300px;
+        height: 200px;
+        padding: 4px 0px 0px 6px;
+        margin: 0 auto;
+        background: #fff url(../images/map1-480.png) no-repeat;
+    }
 
-/* Landscape phone to portrait tablet */
-@media (max-width: 767px) {
-    ...
-}
+    .MapContainer {
+        width: 380px;
+        height: 262px;
+        padding: 4px 0px 0px 6px;
+        margin: 0 auto;
+        background: #fff url(../images/map1-480.png) no-repeat;
+    }
 
-/* Landscape phones and down */
-@media (max-width: 480px) {
-    ...
+    .cell {
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        float: left;
+        border: 1px solid #999;
+    }
 }
-
