--- a/css/main.css
+++ b/css/main.css
@@ -274,10 +274,14 @@ p {
     .cell {
         width: 24px;
         height: 24px;
-        text-align: center;
-        float: left;
-        border: 1px solid #999;
     }
+	body {
+	  font-size: 11px;
+	}
+	.nav > li > a {
+	  padding: 8px 10px;
+	}
+
 }
 
 /* Large desktop */
@@ -301,8 +305,13 @@ p {
     .cell {
         width: 20px;
         height: 20px;
-        text-align: center;
-        float: left;
-        border: 1px solid #999;
     }
+
+	body {
+	  font-size: 8px;
+	}
+	.nav > li > a {
+	  padding: 1px 2px;
+	}
+
 }
