--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,12 @@ p {
 	  padding: 8px 10px;
 	}
 
+	.form-control {
+	  width: 30px;
+	  height: 24px;
+	  padding: 2px 4px;
+	  font-size: 11px;
+	}
 }
 
 /* Large desktop */
@@ -373,6 +379,13 @@ p {
 	}
 	.nav > li > a {
 	  padding: 1px 2px;
+	}
+
+	.form-control {
+	  width: 25px;
+	  height: 18px;
+	  padding: 2px 4px;
+	  font-size: 8px;
 	}
 
 }
