Fixed the ghost bubble on empty cells

--- a/css/main.css
+++ b/css/main.css
@@ -166,6 +166,10 @@ p {
     text-align: right;
 }
 
+.noUnitStats {
+    display: none;
+}
+
 .unitStats {
     display: none;
     position: absolute;
